<resources>
    <string name="app_name">QuisListing</string>
    <string name="facebook_app_id">1006698042802363</string>
    <string name="fb_login_protocol_scheme">fb1006698042802363</string>
    <string name="twitter_consumer_key">pZTGl7gtpEg3vcjyoK7WNsRin</string>
    <string name="twitter_consumer_secret">4mbAoQXdubouVvKe87KK7W7UOncqKcYiy7hNrcMCbx3qaDKloX</string>
    <string name="google_client_id">124573898319–5dpob2438c54n215uodci5p2l4a9l4bi.apps.googleusercontent.com</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="signup">No account yet? Create one</string>
    <string name="email">Your Email</string>
    <string name="firstname">First name</string>
    <string name="lastname">Last name</string>
    <string name="register">Register</string>
    <string name="actionsettings">Settings</string>
    <string name="signin">Sign in</string>
    <string name="addlisting">Add Listing</string>
    <string name="listings">My Listings</string>
    <string name="messagecenter">Message center</string>
    <string name="language">Language</string>
    <string name="languagedescription">Change language</string>
    <string name="profile">Profile</string>
    <string name="signout">Sign out</string>
    <string name="qlimage">The default QuisListing image</string>
    <string name="existinguser">Already a member? Login</string>
    <string name="save">Save</string>
    <string name="receiveupdates">Receive updates via email</string>
    <string name="selectlanguage">Select Language</string>
    <string name="profilepreferences">Here you can change your profile preferences</string>
    <string name="english">English</string>
    <string name="bulgarian">Bulgarian</string>
    <string name="romanian">Romanian</string>
    <string name="labelCategory">Category</string>
    <string name="labelLocation">Location</string>
    <string name="labelPrice">Price</string>
    <string name="labelContact">Contact</string>
    <string name="labelDescription">Description</string>
    <string name="editlisting">Edit\nListing</string>
    <string name="sendmessage">Send\nMessage</string>
    <string name="reportlisting">Report\nListing</string>
    <string name="addlistingreleaseinfo">Add listing feature will be available in version 2.0. If you have any suggestion about a new feature, feel free to contact us</string>
    <string name="name">Your name</string>
    <string name="subject">Subject</string>
    <string name="message">Your Message</string>
    <string name="messageinfo">Only 100 characters are allowed</string>
    <string name="send">Send</string>
    <string name="editlistingreleaseinfo">Edit listing feature will be available in version 2.0. If you have any suggestion about a new feature, feel free to contact us</string>
    <string name="contactemailsent">Message successfully sent</string>
    <string name="contactemailnotsent">Something went wrong, please try again later</string>
    <string name="loginsuccessful">Account created successfully, please check your email in order to activate your account</string>
    <string name="loginfailed">Login failed, please try again later</string>
    <string name="profileupdated">Profile successfully updated</string>
    <string name="profilenotupdated">Problem accessing server, please try again later</string>
    <string name="creatingaccount">Creating Account…</string>
    <string name="authenticatinguser">Authenticating, please wait</string>
    <string name="emailvalidation">Please enter a valid username address</string>
    <string name="passwordvalidation">Please enter a valid password</string>
    <string name="firstnamevalidation">Enter valid first name (not longer than 15 characters)</string>
    <string name="lastnamevalidation">Enter valid last name (not longer than 15 characters)</string>
    <string name="fetchdata">Fetching data, please wait</string>
    <string name="nolistings">You don\'t have any listings, you can add some from add listing section here.</string>
    <string name="norecentlistings">No recent listings available, you can create your own listing by clicking on the button below.</string>
    <string name="facebookconnectioncancelled">Connection to facebook is cancelled, please try again later</string>
    <string name="facebookconnectionerror">Connection to facebook failed, please try again later</string>
    <string name="twitterconnectionerror">Connection to twitter failed, please try again later</string>
    <string name="googleconnectionerror">Connection to google failed, please try again later</string>
    <string name="fetchmessages">Fetching messages, please wait</string>
    <string name="nomessages">There are no records to show</string>
    <string name="typemessage">Type to compose</string>
    <string name="nomessage">Conversation thread is empty</string>
    <string name="alertdialogmessage">Do you want to reload the screen in order to see the latest message?</string>
    <string name="alertdialogyes">Yes</string>
    <string name="alertdialogno">No</string>
    <string name="alertdialogtitle">Reload screen</string>
    <string name="messagesent">Message successfully sent</string>
    <string name="messagenotsent">Message not sent, please try again later</string>
    <string name="listingdetailsactivitytitle">Listing detail</string>
    <string name="signupactivitytitle">Sign up</string>
    <string name="profileactivitytitle">Your profile</string>
    <string name="messagesactivitytitle">Your messages</string>
    <string name="messageoverviewactivitytitle">Conversation thread</string>
    <string name="mainactivitytitle">Quis Listing</string>
    <string name="loginactivitytitle">Login</string>
    <string name="editlistingactivitytitle">Edit your listing</string>
    <string name="sendmessageactivitytitle">Send message</string>
    <string name="listingsactivitytitle">Your listings</string>
    <string name="addlistingactivitytitle">Add new listing</string>
    <string name="messagenamevalidation">Name field must not be empty or longer than 20 characters</string>
    <string name="messagetextvalidation">The text of the message must not be empty or longer than 100 characters</string>
    <string name="password_strength_caption">Password Strength: {0}</string>
    <string name="password_strength_weak">Weak</string>
    <string name="password_strength_medium">Medium</string>
    <string name="password_strength_strong">Strong</string>
    <string name="password_strength_very_strong">Very Strong</string>
    <string name="searchText">Search</string>
    <string name="category">Category</string>
    <string name="country">Country</string>
    <string name="state">State</string>
    <string name="city">City</string>
    <string name="search">Search</string>
    <string-array name="country_arrays">
        <item>English</item>
        <item>Bulgarian</item>
        <item>Romanian</item>
    </string-array>
    <string name="selectcountry">Select country</string>
    <string name="selectstate">Select state</string>
    <string name="selectcity">Select city</string>
    <string name="all">All</string>
    <string name="nosearchcriteriaavailable">At this moment, additional search criteria is not available</string>
    <string name="selectcategory">Select category</string>
    <string name="multiplied_expanding">Multiplied expanding</string>
    <string name="always_expanded">Always expanded</string>
    <string name="searchresultactivitytitle">Search results</string>
    <string name="okdialog">OK</string>
    <string name="canceldialog">CANCEL</string>
    <string name="nolistingresults">Sorry, your search <![CDATA[<b>%s</b>]]> did not match any listings. Please try again.</string>
    <string name="closeapp">Are you sure you want to exit?</string>
    <string name="closeappyes">Yes</string>
    <string name="closeappno">No</string>
    <string name="retrievelistingdetailsfailed">Listing is not loaded properly, please try again later.</string>
    <string name="retrieveusererror">User not loaded properly, please try again later.</string>
    <string name="retrievemessageerror">Unable to retrieve message conversation, please try again later.</string>
    <string name="retrievecategoryerror">Categories not loaded properly, please try again later.</string>
    <string name="retrievelocationerror">Languages not loaded properly, please try again later.</string>
    <string name="registernewusertext">Please note that if you send message, you will be automatically registered to QuisListing application. Proceed with user registration?</string>
    <string name="alertdialognewuser">Register new user</string>
    <string name="noconnection">No connection available, please try again later.</string>
    <string name="nolistingdetails">Listing details are currently unavailable, please try again later.</string>
    <string name="retrieveprofileprefencesfailed">User preferences are currently unavailable, please try again later.</string>
    <string name="preferencesnotavailable">User preferences page is not available.</string>
</resources>
