<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:fitsSystemWindows="true">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="50dp"
        android:paddingLeft="24dp"
        android:paddingRight="24dp">

        <TextView android:id="@+id/changePreferences"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/profilepreferences"
            android:gravity="center"
            android:textSize="16sp"/>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="8dp">

            <EditText android:id="@+id/email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"
                android:hint="@string/email"
                android:enabled="false"/>
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp">

            <EditText android:id="@+id/firstName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"
                android:hint="@string/firstname" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp">

            <EditText android:id="@+id/lastName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"
                android:hint="@string/lastname" />
        </android.support.design.widget.TextInputLayout>

        <CheckBox
            android:text="@string/receiveupdates"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/receiveUpdates"/>

        <Spinner
            android:id="@+id/language"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:entries="@array/country_arrays"
            android:prompt="@string/selectlanguage"/>

        <android.support.v7.widget.AppCompatButton
            android:id="@+id/save"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:layout_marginBottom="24dp"
            android:padding="12dp"
            android:text="@string/save"/>
    </LinearLayout>

</ScrollView>
