<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:fillViewport="true">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:paddingTop="20dp">

        <ImageView
            android:layout_width="72dp"
            android:layout_height="72dp"
            android:layout_gravity="center_horizontal"
            android:contentDescription="@string/qlimage"
            android:src="@drawable/ql_logo_01_50x50" />

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginTop="8dp">

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/username"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/username"
                    android:inputType="textEmailAddress" />

                <Button
                    android:id="@+id/clearText"
                    android:layout_width="25dp"
                    android:layout_height="25dp"
                    android:layout_gravity="end|center_vertical"
                    android:layout_marginEnd="10dp"
                    android:layout_marginRight="10dp"
                    android:background="@drawable/x"
                    android:visibility="invisible" />
            </FrameLayout>
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginTop="8dp"
            app:passwordToggleEnabled="true"
            app:passwordToggleTint="@color/colorAccent">

            <EditText
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/password"
                android:inputType="textPassword" />
            <ProgressBar
                android:id="@+id/progressBar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:indeterminate="false"
                android:maxHeight="20dip"
                android:minHeight="20dip"
                android:layout_marginRight="4dp"
                android:layout_marginEnd="4dp"
                android:layout_marginStart="4dp"
                android:layout_marginLeft="4dp"
                android:layout_weight="1"
                android:progress="0"
                android:visibility="invisible"
                style="?android:attr/progressBarStyleHorizontal"/>
            <TextView
                android:id="@+id/progressBarText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:text="@string/password_strength_weak"
                android:visibility="invisible"/>
        </android.support.design.widget.TextInputLayout>

        <android.support.v7.widget.AppCompatButton
            android:id="@+id/login"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="10dp"
            android:padding="12dp"
            android:text="@string/login" />

        <TextView
            android:id="@+id/signup"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15dp"
            android:gravity="center"
            android:text="@string/signup"
            android:textSize="16sp" />

        <com.facebook.login.widget.LoginButton
            android:id="@+id/facebookLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="15dp"
            android:paddingBottom="15dp"
            android:layout_marginBottom="15dp"
            android:layout_marginRight="30dp"
            android:layout_marginLeft="30dp" />

        <com.twitter.sdk.android.core.identity.TwitterLoginButton
            android:id="@+id/twitterLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="15dp"
            android:paddingBottom="15dp"
            android:layout_marginBottom="15dp"
            android:layout_marginRight="30dp"
            android:layout_marginLeft="30dp" />

        <com.google.android.gms.common.SignInButton
            android:id="@+id/googleLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:buttonSize="wide"
            app:colorScheme="dark"
            android:layout_marginRight="30dp"
            android:layout_marginLeft="30dp"/>
    </LinearLayout>
</ScrollView>